# ostis-computer-games

./: .gitmodules  repo.path
kb/specifications/addGameInfoSpecifications/: lib_component_ui_menu_add_game_info.scs  lib_component_ui_menu_add_info_price.scs  ui_menu_add_game_info.scsi  ui_menu_add_info_price.scsi
kb/ui_menu/: ui_menu_na_example_commands.scs
problem-solver/cxx/: CMakeLists.txt
problem-solver/cxx/addGameInfoModule/: CMakeLists.txt  addGameInfoModule.cpp  addGameInfoModule.hpp
problem-solver/cxx/addGameInfoModule/agents/: addInfoAgeRatingAgent.cpp  addInfoAgeRatingAgent.hpp  addInfoPriceAgent.cpp  addInfoPriceAgent.hpp  infoMissSearchAgent.cpp  infoMissSearchAgent.hpp
problem-solver/cxx/addGameInfoModule/agents/py_utils/: gog.py
problem-solver/cxx/addGameInfoModule/agents/py_utils/data/: age_rating.txt
problem-solver/cxx/addGameInfoModule/keynodes/: keynodes.cpp  keynodes.hpp
